tests/algorithms/x/Erlang/graphs/dinic.error
run: exit status 127
escript: exception error: no match of right hand side value 
                 {nil,#{"adj" =>
                            [[[1,0,1,0],[2,0,1,0],[3,0,1,0],[4,0,1,0]],
                             [[0,0,0,0],[5,1,1,0]],
                             [[0,1,0,0],[6,1,1,0]],
                             [[0,2,0,0],[7,1,1,0]],
                             [[0,3,0,0],[8,1,1,0]],
                             [[9,0,1,0],[1,1,0,0]],
                             [[9,1,1,0],[2,1,0,0]],
                             [[9,2,1,0],[3,1,0,0]],
                             [[9,3,1,0],[4,1,0,0]],
                             [[5,0,0,0],[6,0,0,0],[7,0,0,0],[8,0,0,0]]],
                        "lvl" => [1,0,0,0,0,0,0,0,0,0],
                        "n" => 10,
                        "ptr" => [4,0,0,0,0,0,0,0,0,0],
                        "q" => [0,0,0,0,0,0,0,0,0,0]}}
  in function  main:'-max_flow/3-Fun_8_loop/6-1-'/6 (/workspace/mochi/tests/algorithms/x/Erlang/graphs/dinic.erl, line 251)
  in call from main:'-max_flow/3-Fun_9_loop/5-0-'/5 (/workspace/mochi/tests/algorithms/x/Erlang/graphs/dinic.erl, line 274)
  in call from main:max_flow/3 (/workspace/mochi/tests/algorithms/x/Erlang/graphs/dinic.erl, line 284)
  in call from main:main/1 (/workspace/mochi/tests/algorithms/x/Erlang/graphs/dinic.erl, line 331)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
  in call from init:start_em/1